# typeguard

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini  typeguard.py
.github/: FUNDING.yml  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: codeqa-test.yml  publish.yml  test.yml
docs/: api.rst  conf.py  contributing.rst  extending.rst  features.rst  index.rst  userguide.rst  versionhistory.rst
mypy_tests/: check_negative_tests.py  negative.output.expected  negative.py  positive.py  run_local.sh
src/typeguard/: __init__.py  _checkers.py  _config.py  _decorators.py  _exceptions.py  _functions.py  _generators.py  _importhook.py  _memo.py  _pytest_plugin.py  _suppression.py  _transformer.py  _union_transformer.py  _utils.py  checkers.py  config.py  exceptions.py  generators.py  importhook.py  memo.py  pytest_plugin.py  utils.py
tests/: __init__.py  conftest.py  deferredannos.py  dummyclasses.py  dummymodule.py  dummymodule_3_6.py  test_checkers.py  test_functions.py  test_importhook.py  test_inline.py  test_instrumentation.py  test_plugins.py  test_pytest_plugin.py  test_transformer.py  test_typechecked.py  test_typeguard.py  test_typeguard_py36.py  test_typeguard_py38.py  test_union_transformer.py  test_utils.py  test_warn_on_error.py
tests/mypy/: check_type_annotations.py  negative.py  positive.py  test_type_annotations.py
typeguard/: __init__.py  importhook.py  pytest_plugin.py
