[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm[toml] >= 6.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "typeguard"
description = "Run-time type checker for Python"
readme = "README.rst"
authors = [{name = "Alex Grönholm", email = "alex.gronholm@nextday.fi"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">= 3.8"
dependencies = [
    "importlib_metadata >= 3.6; python_version < '3.10'",
    "typing_extensions >= 4.10.0",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://typeguard.readthedocs.io/en/latest/"
"Change log" = "https://typeguard.readthedocs.io/en/latest/versionhistory.html"
"Source code" = "https://github.com/agronholm/typeguard"
"Issue tracker" = "https://github.com/agronholm/typeguard/issues"

[project.optional-dependencies]
test = [
    "coverage[toml] >= 7",
    "pytest >= 7",
    'mypy >= 1.2.0; python_implementation != "PyPy"',
]
doc = [
    "packaging",
    "Sphinx >= 7",
    "sphinx-autodoc-typehints >= 1.2.0",
    "sphinx-rtd-theme >= 1.3.0",
]

[project.entry-points]
pytest11 = {typeguard = "typeguard._pytest_plugin"}

[tool.setuptools.package-data]
typeguard = ["py.typed"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.pytest.ini_options]
addopts = "--tb=short"
testpaths = "tests"
xfail_strict = true
filterwarnings = ["error"]

[tool.coverage.run]
source = ["typeguard"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
extend-select = [
    "W",            # pycodestyle warnings
    "I",            # isort
    "PGH",          # pygrep-hooks
    "UP",           # pyupgrade
    "B0",           # flake8-bugbear
]
ignore = [
    "S307",
    "B008",
]

[tool.mypy]
python_version = "3.9"
strict = true
pretty = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = pypy3, py38, py39, py310, py311, py312, py313
skip_missing_interpreters = true
minversion = 4.0

[testenv]
extras = test
commands = coverage run -m pytest {posargs}
package = editable

[testenv:docs]
extras = doc
package = editable
commands = sphinx-build -W -n docs build/sphinx
"""
