[metadata]
name = typeguard
description = Run-time type checker for Python
long_description = file: README.rst
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
project_urls =
    Documentation = https://typeguard.readthedocs.io/en/latest/
    Change log = https://typeguard.readthedocs.io/en/latest/versionhistory.html
    Source code = https://github.com/agronholm/typeguard
    Issue tracker = https://github.com/agronholm/typeguard/issues
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = typeguard
python_requires = >= 3.5.3
zip_safe = False

[options.package_data]
typeguard = py.typed

[options.extras_require]
test =
    pytest
    typing_extensions
    mypy
doc =
    sphinx_rtd_theme
    sphinx-autodoc-typehints >= 1.2.0

[options.entry_points]
pytest11 =
    typeguard = typeguard.pytest_plugin

[tool:pytest]
addopts = -rsx --tb=short
testpaths = tests

[coverage:run]
source = typeguard

[coverage:report]
show_missing = true

[flake8]
max-line-length = 99
ignore = E251,W504

[mypy]
strict = true
pretty = true
